read settings from MODULE_CONFIGURATION table
git-svn-id: https://ho1.svn.sourceforge.net/svnroot/ho1/branches/ifa-fix@1946 b8de521a-fa13-0410-8113-fc7ffabbd59a